[package]
name = "my_ping_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dns-lookup = "2.0.4"
structopt = "0.3.26"
surge-ping = "0.8.1"
tokio = { version = "1.39.0", features = ["full"] }
trust-dns-resolver = "0.23.2"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "my_ping"
path = "src/bin/my_ping.rs"